Finish vectorised envs section

--- a/getting_started.ipynb
+++ b/getting_started.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Getting Started with OpenAI Gym: The Baic Building Blocks\n",
-    "Based on [this article](https://blog.paperspace.com/getting-started-with-openai-gym/) but updated to match current version of Gym"
+    "Based on [this article](https://blog.paperspace.com/getting-started-with-openai-gym/) but modified to match current version of Gym."
    ]
   },
   {
@@ -16,7 +16,7 @@
    "source": [
     "## Environments\n",
     "\n",
-    "The fundamental building block of OpenAI Gym is the `Env` class. It is a Python class that basically implements a simulator that runs the  environment you want to train your agent in."
+    "The fundamental building block of OpenAI Gym is the `Env` class. It is a Python class that basically implements a simulator that runs the environment we want to train our agent in."
    ]
   },
   {
@@ -140,6 +140,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f7e61090",
+   "metadata": {},
+   "source": [
+    "To see the animated environment, run `.\\mountain_car.py`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9bc68524",
    "metadata": {},
    "source": [
@@ -242,7 +250,7 @@
    "id": "0c57ef3c",
    "metadata": {},
    "source": [
-    "The `Wrapper` class in OpenAI Gym provides you with the functionality to modify various parts of an environment to suit your needs. Maybe you want to normalize your pixel input, or maybe you want to clip your rewards."
+    "The `Wrapper` class in OpenAI Gym provides us with the functionality to modify various parts of an environment to suit our needs. Maybe we want to normalize your pixel input, or maybe clip our rewards."
    ]
   },
   {
@@ -268,8 +276,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "876f54f7",
+   "metadata": {},
+   "source": [
+    "To see the environment run with random actions, run `breakout.py`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "bb2e2eef",
    "metadata": {},
    "outputs": [
@@ -278,14 +294,6 @@
      "output_type": "stream",
      "text": [
       "New observation space: Box(0, 255, (4, 210, 160, 3), uint8)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\justin.mak\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\gym\\core.py:329: DeprecationWarning: \u001b[33mWARN: Initializing wrapper in old step API which returns one bool instead of two. It is recommended to set `new_step_api=True` to use new step API. This will be the default behaviour in future.\u001b[0m\n",
-      "  deprecation(\n"
      ]
     }
    ],
@@ -331,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "78d41db5",
    "metadata": {},
    "outputs": [],
@@ -339,11 +347,63 @@
     "from wrappers import ObservationWrapper, RewardWrapper, ActionWrapper\n",
     "\n",
     "env = gym.make('ALE/Breakout-v5', new_step_api=True, render_mode=\"human\")\n",
-    "wrapped_env = ObservationWrapper(RewardWrapper(ActionWrapper(env)))\n",
-    "\n",
+    "wrapped_env = ObservationWrapper(RewardWrapper(ActionWrapper(env)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "914d8a60",
+   "metadata": {},
+   "source": [
+    "To see the environment modified with wrappers, run `breakout_wrapped.py`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "544169e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrapped env: <ObservationWrapper<RewardWrapper<ActionWrapper<TimeLimit<OrderEnforcing<StepAPICompatibility<PassiveEnvChecker<AtariEnv<ALE/Breakout-v5>>>>>>>>>\n",
+      "Unwrapped env: <AtariEnv<ALE/Breakout-v5>>\n",
+      "Action meanings: ['NOOP', 'FIRE', 'RIGHT', 'LEFT']\n"
+     ]
+    }
+   ],
+   "source": [
     "print(\"Wrapped env:\", wrapped_env)\n",
     "print(\"Unwrapped env:\", wrapped_env.unwrapped)\n",
     "print(\"Action meanings:\", wrapped_env.unwrapped.get_action_meanings())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d786946",
+   "metadata": {},
+   "source": [
+    "## Vectorised Environments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "550ac675",
+   "metadata": {},
+   "source": [
+    "Vectorised environments are a method for stacking multiple independent environments into a single environment. Instead of training an RL agent on 1 environment per step, it allows us to train it on `n` environments per step.\n",
+    "\n",
+    "Here, we will use another library called `stable-baselines3`, whose features include wrappers that allow us to run multiple environments in parallel using a single function call. The wrapper of interest here is called `SubprocVecEnv`, which creates a multiprocess vectorised wrapper for multiple environments. Each environment is distributied to its own process, allowing significant speed up when the environment is computationally complex."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "029e30d3",
+   "metadata": {},
+   "source": [
+    "To see renders of the vectorised environment, run `breakout_vectorised.py`"
    ]
   }
  ],
